--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro'
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 	description?: string;
@@ -17,7 +18,8 @@ const { title, description = "A community of music producers and enthusiasts", i
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta property="og:image" content={image}>
+		<meta property="og:image" content={image}/>
+		<ViewTransitions />
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen">
